fixed z-index of the header-cursor

--- a/style.css
+++ b/style.css
@@ -41,6 +41,8 @@ a{
     letter-spacing: -.04em;
     font-weight: 1000;
     line-height: .75em;
+    position: relative;
+    z-index: -2;
 }
 
 /* *********************************typography********************************* */
@@ -202,7 +204,8 @@ a{
 }
 
 .cursor{
-    position: fixed;
+    z-index: -1;
+    position: absolute;
     width: 300px;
     height: 400px;
     background: transparent;
